Closed Bug 1109746 Opened 10 years ago Closed 10 years ago

Fix more bad implicit constructors in some random code across the tree

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8534448 - Flags: review?(benjamin)
So I decided to go ahead and fix these and a few other last ones of these constructors without review and finish this thing.

https://hg.mozilla.org/integration/mozilla-inbound/rev/630ce3c3fa31
https://hg.mozilla.org/mozilla-central/rev/630ce3c3fa31
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Attachment #8534448 - Flags: review?(benjamin) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: