Bug 1109746 - Fix more bad implicit constructors in some random code across the tree