accessible/ipc/ProxyAccessible.h
@@ -86,7 +86,7 @@ public:
   uint64_t ID() const { return mID; }
 
 protected:
-  ProxyAccessible(DocAccessibleParent* aThisAsDoc) :
+  explicit ProxyAccessible(DocAccessibleParent* aThisAsDoc) :
     mParent(nullptr), mDoc(aThisAsDoc), mWrapper(0), mID(0),
     mRole(roles::DOCUMENT)
   { MOZ_COUNT_CTOR(ProxyAccessible); }
